--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ h2 {
 	font-size: 18px;
 	margin-top: 5px;
 	margin-bottom: 0px;
+	color: rgb(0, 0, 0);
 }
 
 
@@ -140,7 +141,7 @@ h2 {
 
 /* Background */
 .background {
-  background: url(../images/background.jpg) no-repeat 50% 100%;
+  background: url(../images/vivid-abstract-background-cubes.jpg) no-repeat 50% 100%;
   bottom: -20px;
   background-size: cover;
   position: absolute;
