--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,8 @@ h2 {
 	font-size: 18px;
 	margin-top: 5px;
 	margin-bottom: 0px;
-	color: rgb(0, 0, 0);
+	color: rgb(255, 255, 255);
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
@@ -141,7 +142,7 @@ h2 {
 
 /* Background */
 .background {
-  background: url(../images/vivid-abstract-background-cubes.jpg) no-repeat 50% 100%;
+  background: url(../images/pexels-lukaszmartenka-3207527.jpg) no-repeat 50% 100%;
   bottom: -20px;
   background-size: cover;
   position: absolute;
@@ -1036,4 +1037,32 @@ h2 {
 		border-radius: 10px;
 		padding: 25px 45px;
 	}
+}
+
+
+.navbar {
+    background-color: #333;
+    overflow: hidden;
+}
+
+.navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar ul li {
+    float: left;
+}
+
+.navbar ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}
+
+.navbar ul li a:hover {
+    background-color: #575757;
 }
